# app/Models/User.php
@@ -12,233 +12,241 @@ use Laravel\Sanctum\HasApiTokens;
 
 class User extends Authenticatable
 {
-    use HasApiTokens, HasFactory, Notifiable;
+	use HasApiTokens, HasFactory, Notifiable;
 
-    /**
-     * The attributes that are mass assignable.
-     *
-     * @var array<int, string>
-     */
-    protected $fillable = [
-        "name",
-        "email",
-        "full_name",
-        "profile",
-        "email_verified_at",
-        "password",
-        "si_profile_id",
-        "activated",
-        "password_change_required",
-    ];
+	/**
+	 * The attributes that are mass assignable.
+	 *
+	 * @var array<int, string>
+	 */
+	protected $fillable = [
+		"name",
+		"email",
+		"full_name",
+		"profile",
+		"email_verified_at",
+		"password",
+		"si_profile_id",
+		"activated",
+		"password_change_required",
+	];
 
-    protected $appends = ['ability_rules'];
+	protected $appends = ['ability_rules'];
 
-    /**
-     * The attributes that should be hidden for serialization.
-     *
-     * @var array<int, string>
-     */
-    protected $hidden = [
-        'password',
-        'remember_token',
-    ];
+	/**
+	 * The attributes that should be hidden for serialization.
+	 *
+	 * @var array<int, string>
+	 */
+	protected $hidden = [
+		'password',
+		'remember_token',
+	];
 
-    /**
-     * The attributes that should be cast.
-     *
-     * @var array<string, string>
-     */
-    protected $casts = [
-        'email_verified_at' => 'datetime',
-        'password' => 'hashed',
-    ];
+	/**
+	 * The attributes that should be cast.
+	 *
+	 * @var array<string, string>
+	 */
+	protected $casts = [
+		'email_verified_at' => 'datetime',
+		'password' => 'hashed',
+	];
 
-    public function toArray()
-    {
-        $data = parent::toArray();
-        $data["created_at_fr"] = Carbon::parse($data["created_at"])->format("d/m/Y H:i:s");
-        $data["updated_at_fr"] = Carbon::parse($data["updated_at"])->format("d/m/Y H:i:s");
-        $data["email_verified_at_fr"] = Carbon::parse($data["email_verified_at"])->format("d/m/Y H:i:s");
-        return $data;
-    }
+	public function toArray()
+	{
+		$data = parent::toArray();
+		$data["created_at_fr"] = Carbon::parse($data["created_at"])->format("d/m/Y H:i:s");
+		$data["updated_at_fr"] = Carbon::parse($data["updated_at"])->format("d/m/Y H:i:s");
+		$data["email_verified_at_fr"] = Carbon::parse($data["email_verified_at"])->format("d/m/Y H:i:s");
+		return $data;
+	}
 
-    public function verbal_trial(): HasMany
-    {
-        return $this->hasMany(VerbalTrial::class, 'caf_id', "id");
-    }
+	public function verbal_trial(): HasMany
+	{
+		return $this->hasMany(VerbalTrial::class, 'caf_id', "id");
+	}
 
-    public function verbals_trials(): HasMany
-    {
-        return $this->hasMany(VerbalTrial::class, "creator_id", "id");
-    }
-    public function contracts(): HasMany
-    {
-        return $this->hasMany(Contract::class, "creator_id", "id");
-    }
-    public function notifications(): HasMany
-    {
-        return $this->hasMany(Notification::class, "creator_id", "id");
-    }
+	public function verbals_trials(): HasMany
+	{
+		return $this->hasMany(VerbalTrial::class, "creator_id", "id");
+	}
+	public function contracts(): HasMany
+	{
+		return $this->hasMany(Contract::class, "creator_id", "id");
+	}
+	public function notifications(): HasMany
+	{
+		return $this->hasMany(Notification::class, "creator_id", "id");
+	}
 
-    public function getAbilityRulesAttribute()
-    {
-        switch ($this->profile) {
-            case ('admin'):
-                return [
-                    [
-                        'action' => ['manage'],
-                        'subject' => ['all'],
-                    ]
-                ];
-            case ('credit_analyst'):
-                return [
-                    [
-                        "action" => "read",
-                        "subject" => ["non-mortgage-contract", "mortgame-contract"]
-                    ],
-                    [
-                        "action" => ["read", "historical", "create", "update", "delete", "download"],
-                        "subject" => ["pv"],
-                    ],
-                    [
-                        "action" => ["read_caf"],
-                        "subject" => ["user"]
-                    ],
-                    [
-                        "action" => ["read"],
-                        "subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
-                    ]
-                ];
-            case ('credit_admin'):
-                return [
-                    [
-                        "action" => "read",
-                        "subject" => ["non-mortgage-contract", "mortgame-contract"]
-                    ],
-                    [
-                        "action" => ["read", "historical", "download", "reject", "validate", "change_status"],
-                        "subject" => ["pv"],
-                    ],
-                    [
-                        "action" => ["create", "read", "historical", "waiting_cat", "update", "change_status", "delete", "download"],
-                        "subject" => ["contract"],
-                    ],
-                    [
-                        "action" => ["create", "read", "historical", "without-signed-contract", "update", "delete", "download"],
-                        "subject" => ["notification"],
-                    ],
-                    [
-                        "action" => ["create", "read", "update", "delete", "download"],
-                        "subject" => ["guarantor"],
-                    ],
-                    [
-                        "action" => ["read", "create", "update", "delete", "download"],
-                        "subject" => ["cat"],
-                    ],
-                    [
-                        "action" => ["read"],
-                        "subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
-                    ]
-                ];
-            case ('head_credit'):
-                return [
-                    [
-                        "action" => "read",
-                        "subject" => ["non-mortgage-contract", "mortgame-contract"]
-                    ],
-                    [
-                        "action" => ["read", "historical", "download"],
-                        "subject" => ["pv"],
-                    ],
-                    [
-                        "action" => ["read", "historical", "waiting_cat", "download"],
-                        "subject" => ["contract"],
-                    ],
-                    [
-                        "action" => ["read", "historical", "without-head-validation", "download"],
-                        "subject" => ["notification"],
-                    ],
-                    [
-                        "action" => ["read", "download"],
-                        "subject" => ["guarantor"],
-                    ],
-                    [
-                        "action" => ["read", "download", "validate", "reject_validation", "download"],
-                        "subject" => ["cat"],
-                    ],
-                    [
-                        "action" => ["read"],
-                        "subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
-                    ]
-                ];
-            case ('operation'):
-                return [
-                    [
-                        "action" => "read",
-                        "subject" => ["non-mortgage-contract", "mortgame-contract"]
-                    ],
-                    [
-                        "action" => ["read", "download", "unblock", "reject_unblock"],
-                        "subject" => ["cat"],
-                    ],
-                    [
-                        "action" => ["read"],
-                        "subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
-                    ]
-                ];
-            case ('legal'):
-                return [
-                    [
-                        "action" => "read",
-                        "subject" => ["non-mortgage-contract", "mortgame-contract"]
-                    ],
-                ];
-            case ('dex'):
-                return [
-                    [
-                        "action" => "read",
-                        "subject" => ["non-mortgage-contract", "mortgame-contract"]
-                    ],
-                    [
-                        "action" => "read",
-                        "subject" => ["non-mortgage-contract", "mortgame-contract"]
-                    ],
-                    [
-                        "action" => ["read", "historical", "download"],
-                        "subject" => ["pv"]
-                    ],
-                    [
-                        "action" => ["read", "historical", "download"],
-                        "subject" => ["contract"]
-                    ],
-                    [
-                        "action" => ["read", "download"],
-                        "subject" => ["cat"]
-                    ],
-                    [
-                        "action" => ["read", "download"],
-                        "subject" => ["guarantor"],
-                    ],
-                    [
-                        "action" => ["read"],
-                        "subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
-                    ]
-                ];
-            case ('caf'):
-                return [
-                    [
-                        "action" => "read",
-                        "subject" => ["non-mortgage-contract", "mortgame-contract"]
-                    ],
-                    [
-                        "action" => ["read", "upload", "download", "send"],
-                        "subject" => ["contract", "guarantor", "notification"],
-                    ],
-                    [
-                        "action" => ["read"],
-                        "subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
-                    ]
-                ];
-        }
-    }
+	public function getAbilityRulesAttribute()
+	{
+		switch ($this->profile) {
+			case ('admin'):
+				return [
+					[
+						'action' => ['manage'],
+						'subject' => ['all'],
+					]
+				];
+			case ('credit_analyst'):
+				return [
+					[
+						"action" => "read",
+						"subject" => ["non-mortgage-contract", "mortgage-contract"]
+					],
+					[
+						"action" => ["read", "historical", "create", "update", "delete", "download"],
+						"subject" => ["pv"],
+					],
+					[
+						"action" => ["read_caf"],
+						"subject" => ["user"]
+					],
+					[
+						"action" => ["read"],
+						"subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
+					]
+				];
+			case ('credit_admin'):
+				return [
+					[
+						"action" => "read",
+						"subject" => ["non-mortgage-contract", "mortgage-contract"]
+					],
+					[
+						"action" => ["read", "historical", "download", "reject", "validate", "change_status"],
+						"subject" => ["pv"],
+					],
+					[
+						"action" => ["create", "read", "historical", "update", "change_status", "delete", "download"],
+						"subject" => ["contract"],
+					],
+					[
+						"action" => ["create", "read", "without-signed-contract", "historical", "update", "delete", "download"],
+						"subject" => ["notification"],
+					],
+					[
+						"action" => ["create", "read", "historical", "without-signed-notification", "update", "delete", "download"],
+						"subject" => ["simple-notification"],
+					],
+					[
+						"action" => ["create", "read", "historical", "delete", "download", "change_status"],
+						"subject" => ["cat-simple-notification"]
+					],
+					[
+						"action" => ["create", "read", "update", "delete", "download"],
+						"subject" => ["guarantor"],
+					],
+					[
+						"action" => ["read", "create", "update", "delete", "download"],
+						"subject" => ["cat"],
+					],
+					[
+						"action" => ["read"],
+						"subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
+					]
+				];
+			case ('head_credit'):
+				return [
+					[
+						"action" => "read",
+						"subject" => ["non-mortgage-contract", "mortgage-contract"]
+					],
+					[
+						"action" => ["read", "historical", "download"],
+						"subject" => ["pv"],
+					],
+					[
+						"action" => ["read", "historical", "download"],
+						"subject" => ["contract"],
+					],
+					[
+						"action" => ["read", "without-signed-contract", "historical", "download", "validate", "reject", "change_head_credit_status"],
+						"subject" => ["notification"],
+					],
+					[
+						"action" => ["read", "without-signed-notification", "historical", "download", "validate", "reject", "change_head_credit_status"],
+						"subject" => ["simple-notification"],
+					],
+					[
+						"action" => ["read", "download"],
+						"subject" => ["guarantor"],
+					],
+					[
+						"action" => ["read", "download", "validate", "reject_validation", "download"],
+						"subject" => ["cat"],
+					],
+					[
+						"action" => ["read"],
+						"subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
+					]
+				];
+			case ('operation'):
+				return [
+					[
+						"action" => "read",
+						"subject" => ["non-mortgage-contract", "mortgage-contract"]
+					],
+					[
+						"action" => ["read", "download", "unblock", "reject_unblock"],
+						"subject" => ["cat"],
+					],
+					[
+						"action" => ["read"],
+						"subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
+					]
+				];
+			case ('legal'):
+				return [
+					[
+						"action" => "read",
+						"subject" => ["non-mortgage-contract", "mortgage-contract"]
+					],
+				];
+			case ('dex'):
+				return [
+					[
+						"action" => ["read", "historical", "download"],
+						"subject" => ["pv", "contract", "cat", "guarantor", "non-mortgage-contract", "mortgage-contract", "notification", "simple-notification"]
+					],
+					[
+						"action" => ["without-signed-contract"],
+						"subject" => ["notification"]
+					],
+					[
+						"action" => ["without-signed-notification"],
+						"subject" => ["simple-notification"]
+					],
+					[
+						"action" => ["read"],
+						"subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
+					]
+				];
+			case ('caf'):
+				return [
+					[
+						"action" => "read",
+						"subject" => ["non-mortgage-contract", "mortgage-contract"]
+					],
+					[
+						"action" => ["read", "upload", "download", "send"],
+						"subject" => ["contract", "guarantor"],
+					],
+					[
+						"action" => ["without-signed-contract", "upload", "download", "send"],
+						"subject" => ["notification"]
+					],
+					[
+						"action" => ["without-signed-notification", "upload", "download", "send"],
+						"subject" => ["simple-notification"]
+					],
+					[
+						"action" => ["read"],
+						"subject" => ["type-of-guarantee", "type-of-credit", "type-of-applicant"]
+					]
+				];
+		}
+	}
 }
